--- a/index.css
+++ b/index.css
@@ -310,16 +310,14 @@ height: 50px;
         cursor: pointer;
     }
     .mobilesearch {
-        height: 100%;
         width: 100%;
         position: absolute;
-        z-index: 1;
-        top: 0;
+        z-index: 0;
+        top: 50%;
         right: 0;
         background-color: rgb(255, 255, 255);
         overflow-x: hidden;
         transition: 0.5s;
-        padding-top: 60px;
         display: flex;
         align-items: center;
         align-content: center;
@@ -355,6 +353,9 @@ height: 50px;
         width: 100%;
         margin: 5px;
         border: none;
+    }
+    .mobilesearchinput:focus-visible{
+        outline: none;
     }
     .mobilesearchopenbtn {
         font-size:25px;
